--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -136,7 +136,10 @@
   .social-button:hover .social-button-tooltip {
     opacity: 1;
   }
-  
+  .submitBtn.submitting {
+    cursor: no-drop;
+    opacity: 0.2;
+  }
 /* .projectImg:hover {
     box-shadow: inset 0 0 20px rgb(0, 0, 0); 
 }
