--- a/public/Style.css
+++ b/public/Style.css
@@ -7,7 +7,7 @@
     font-family: 'Poppins',sans-serif;
  }
  body{
-    background-color: rgb(30, 30, 30);
+    background-color: #1e1e1e;
     color: white;
     overflow: hidden;
     overflow-y: scroll;
