--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,6 +1,6 @@
 #skills{
     overflow: hidden;
-    width: 100vw;
+    width: 100%;
     max-width: 65rem;
     display: flex;
     flex-direction: column;
@@ -77,7 +77,9 @@
     .skillBarText>p{
         font-size: 2vw;
     }
-    
+    .skillTitle {
+        font-size: 2rem;
+      }
     
 }
 
@@ -94,7 +96,9 @@
         width: 2.25rem;
     }
    
-    
+    .skillBars {
+        margin: 1rem;
+      }
 }
 @media screen and (max-width:414px){
     .skillBar{
