--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -14,7 +14,7 @@
     object-fit: cover;
     height: 95vh;
     /*filter: grayscale(100%);*/
-    filter: drop-shadow(8px 8px 10px #FF6F00);
+    filter: drop-shadow(1px 1px 2px #FF6F00);
     
 }
 .introContent{
@@ -96,6 +96,7 @@
     .introContent{
         padding-left: 1.5rem;
         width: 90vw;
+        margin-top: 10px;
     }
     .introText{
         font-size: 1.5rem;
