--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -14,7 +14,7 @@
     object-fit: cover;
     height: 95vh;
     /*filter: grayscale(100%);*/
-    filter: drop-shadow(1px 1px 2px #FF6F00);
+    /* filter: drop-shadow(1px 1px 2px #FF6F00); */
     
 }
 .introContent{
@@ -102,8 +102,8 @@
         font-size: 1.5rem;
     }
     .bg{
-        right: 1vw;
-        height: 400px;
+        right: -2.5vw;
+        height: 450px;
         margin-top: 100px;
     }
     .btn {
