--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -14,7 +14,7 @@
     object-fit: cover;
     height: 95vh;
     /*filter: grayscale(100%);*/
-    /* filter: drop-shadow(1px 1px 2px #FF6F00); */
+    filter: drop-shadow(3px 3px 8px #FF6F00);
     
 }
 .introContent{
@@ -104,7 +104,7 @@
     .bg{
         right: -2.5vw;
         height: 450px;
-        margin-top: 100px;
+        margin-top: 70px;
     }
     .btn {
         width: 95px;
