--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -3,13 +3,13 @@
     width: 100vw;
     max-width: 75rem;
     margin: 0 auto;
-    overflow: hidden;
-
+    overflow: visible;
+    /* position: relative; */
 }
 .bg{
     position: absolute;
     top: 2rem;
-    right: 6rem;
+    right: 8rem;
     z-index: -1;
     object-fit: cover;
     height: 95vh;
@@ -26,6 +26,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
+    overflow: hidden;
     
 }
 .hello{
