--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -6,10 +6,11 @@
     
 }
 .navbar{
-    background: rgb(30, 30, 30);
+    background: transparent;
+    backdrop-filter: blur(20px);
     height: 5rem;
     width: 100vw;
-    max-width: 75rem;
+    /* max-width: 75rem; */
     margin: 0 auto;
     padding:1rem 2rem ;
     display: flex;
@@ -18,6 +19,7 @@
     position: sticky;
     top: 0;
     z-index: 3;
+    box-shadow: 0px 8px 10px -5px rgb(0, 0, 0);
     
 }
 .desktopMenuListItem{
@@ -28,11 +30,7 @@
 
 .desktopMenuListItem:hover{
     color: #ff6f00;
-    
-    padding-bottom: 0.5rem;
-    
-    border-bottom: 2px solid #FF6F00 ;
-
+    text-shadow: 0 0 10px #FF6F00, 0 0 20px #FF6F00, 0 0 30px #FF6F00;
 }
 .desktopMenuBtn{
     height: 3rem;
@@ -58,8 +56,7 @@
 }
 .active{
     color: #FF6F00;
-    padding-bottom: 0.5rem;
-    border-bottom: 2px solid #FF6F00 ;
+    text-shadow: 0 0 10px #FF6F00, 0 0 20px #FF6F00, 0 0 30px #FF6F00;
 }
 .mobMenu{
     height: 3rem;
